# internal/handlers/get_shift_schedules_by_week_pagination.go
@@ -68,11 +68,16 @@ func (ss *ShiftService) HandleGetShiftScheduleByWeekWithPagination(c *gin.Contex
 	for _, shiftSchedule := range shiftSchedules {
 		//
 		temp := map[string]interface{}{
+			"id":           shiftSchedule.ID,
 			"alias":        shiftSchedule.Alias,
+			"description":  shiftSchedule.Description,
+			"frequency":    shiftSchedule.Frequency,
+			"status":       shiftSchedule.Status,
 			"week_start":   weekStart.Format(time.RFC3339),
 			"week_end":     weekEnd.Format(time.RFC3339),
 			"manager":      shiftSchedule.Manager,
 			"organization": shiftSchedule.Organization,
+			"users":        shiftSchedule.Users,
 			"shifts":       []interface{}{},
 		}
 
@@ -109,11 +114,16 @@ func (ss *ShiftService) HandleGetShiftScheduleByWeekWithPagination(c *gin.Contex
 		} else {
 			// If empty or not all departments want to be shown
 			data = append(data, map[string]interface{}{
+				"id":           shiftSchedule.ID,
 				"alias":        shiftSchedule.Alias,
+				"description":  shiftSchedule.Description,
+				"frequency":    shiftSchedule.Frequency,
+				"status":       shiftSchedule.Status,
 				"week_start":   weekStart.Format(time.RFC3339),
 				"week_end":     weekEnd.Format(time.RFC3339),
 				"organization": shiftSchedule.Organization,
 				"manager":      shiftSchedule.Manager,
+				"users":        shiftSchedule.Users,
 				"shifts":       []interface{}{},
 			})
 		}
